--- a/apps/admin/src/app/app.component.html
+++ b/apps/admin/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-nx-welcome></app-nx-welcome> <router-outlet></router-outlet>
+<ul class="remote-menu">
+  <li><a routerLink="/">Home</a></li>
+  <li><a routerLink="login">Login</a></li>
+</ul>
+<router-outlet></router-outlet>
