--- a/libs/lib-with-transloco/src/lib/lib-with-transloco/lib-with-transloco.component.html
+++ b/libs/lib-with-transloco/src/lib/lib-with-transloco/lib-with-transloco.component.html
@@ -1,1 +1,7 @@
-<p>lib-with-transloco works!</p>
+<div>
+  transloco library
+</div>
+
+<ng-container *transloco="let t; scope: 'libScope'">
+  {{ t('libScope.helloWorld') }}
+</ng-container>
