--- a/apps/admin/src/app/app.component.html
+++ b/apps/admin/src/app/app.component.html
@@ -2,4 +2,5 @@
   <li><a routerLink="/">Home</a></li>
   <li><a routerLink="login">Login</a></li>
 </ul>
+<lib-lib-with-transloco/>
 <router-outlet></router-outlet>
